Fix dom shifts when removing page transition

--- a/src/components/PageTransition/PageTransition.css
+++ b/src/components/PageTransition/PageTransition.css
@@ -1,9 +1,12 @@
 
 .PageTransition {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: grid;
   place-items: center;
   min-height: 100dvh;
+  width: 100%;
   transform-origin: top;
 
   font-size: var(--fs-display-700);
